fix scrollbar on tile issue

--- a/apps/game/assets/css/game.styl
+++ b/apps/game/assets/css/game.styl
@@ -7,7 +7,9 @@ td.map
   border 1px solid rgba(255, 255, 255, 0)
   background-color transparent
 td.map > div
-  overflow scroll
+  overflow hidden
+  overflow-x hidden
+  overflow-y auto
   max-height 100px
   min-height 100px
 td.map.current
